--- a/main.html
+++ b/main.html
@@ -25,11 +25,11 @@
     </div>
     <button class="carousel-control left" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
       <span class="glyphicon glyphicon-chevron-left " aria-hidden="true"></span>
-      <span class="visually-hidden ">Previous</span>
+<!--       <span class="visually-hidden ">Previous</span> -->
     </button>
     <button class="carousel-control right " type="button" data-bs-target="#myCarousel" data-bs-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+<!--       <span class="visually-hidden">Next</span> -->
     </button>
   </div>
 
